--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^29.0.2",
+        "@types/node": "^18.7.18",
+        "@types/react": "^18.0.20",
+        "@types/react-dom": "^18.0.6",
         "axios": "^0.27.2",
         "gh-pages": "^4.0.0",
         "lodash.debounce": "^4.0.8",
@@ -19,6 +23,7 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "sass": "^1.52.1",
+        "typescript": "^4.8.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
