--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^18.7.18",
         "@types/react": "^18.0.20",
         "@types/react-dom": "^18.0.6",
+        "ahooks": "^3.7.1",
         "axios": "^0.27.2",
         "gh-pages": "^4.0.0",
         "lodash.debounce": "^4.0.8",
